<resources>
    <string name="app_name">TaskFlow</string>
    <string name="title_activity_create_task">CreateTaskActivity</string>
    <string name="taskTitle">Título da tarefa</string>
    <string name="description">Descrição</string>
    <string name="btnCreate">Criar tarefa</string>
    <string name="selectDate">Selecionar data</string>
    <string name="selectTime">Selecionar horário</string>
    <string name="header">Criação de Tarefa</string>
    <string name="priority_label">Prioridade: %1$s</string>
    <string name="dateTime_label">Sem data definida</string>
    <string name="addTaskFAB">Adicionar tarefa</string>
    <string name="back">Voltar</string>
    <string name="view">Visualizar</string>
    <string name="delete">Excluir</string>
    <string name="title_activity_task_card">TaskCardActivity</string>
    <string name="descriptionCard">Descrição:</string>
    <string name="priority">Prioridade:</string>
    <string name="date_time">Data e horário:</string>
    <string name="editTask">Editar</string>
    <string name="complete">Concluir</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="login">Entrar</string>
    <string name="register_question">Não tem uma conta? Cadastre-se</string>
    <string name="register">Cadastrar</string>
    <string name="title_activity_task_list">TaskListActivity</string>
    <string name="user_name">Name</string>
    <string name="register_title">Cadastre-se</string>
    <string name="welcome">Bem vindo!</string>
    <string name="welcome_user">Bem vindo, %1$s!</string>
</resources>