<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Header -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="30dp"
            android:textSize="40sp"
            android:text="@string/header" />

        <!-- Título -->
        <EditText
            android:id="@+id/editTextTitle"
            android:hint="@string/taskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!-- Descrição -->
        <EditText
            android:id="@+id/editTextDescription"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:gravity="top" />

        <!-- Prioridade (Spinner) -->
        <Spinner
            android:id="@+id/spinnerPriority"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <!-- Selecionar Data -->
        <Button
            android:id="@+id/btnSelectDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectDate" />

        <!-- Selecionar Horário -->
        <Button
            android:id="@+id/btnSelectTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectTime" />

        <!-- Botão de Criar Tarefa -->
        <Button
            android:id="@+id/btnCreateTsk"
            android:text="@string/btnCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="24dp" />

        <!-- Voltar -->
        <Button
            android:id="@+id/buttonBack"
            android:text="@string/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</ScrollView>